--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/yuhengen/TGC-Express-Mongo#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
@@ -25,6 +26,8 @@
     "handlebars-helpers": "^0.10.0",
     "hbs": "^4.1.1",
     "mongodb": "^3.6.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "wax-on": "^1.2.2"
   }
 }
